--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="form-layout">
         <div class="background-container">
-
+            <div class="logo-container">
+                <img src="images/odin-lined.png" alt="odin logo" class="logo-img">
+                <h1 class="logo">ODIN</h1>
+            </div>
         </div>
         <div class="content-container">
             <section>
