Add border effect

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                         <div class="input-line"">
                             <div class="label-input">
                                 <label for="password">PASSWORD</label>
-                                <input type="password" id="password" name="password">
+                                <input type="password" id="password" name="password" required>
                             </div>
                             <div class="label-input">
                                 <label for="confirm_password">CONFIRM PASSWORD</label>
-                                <input type="password" id="confirm_password" name="confirm_password">
+                                <input type="password" id="confirm_password" name="confirm_password" required>
                             </div>
                         </div>
                     </div>
